Hero section fix overflow - 100% width

--- a/css/style.css
+++ b/css/style.css
@@ -307,7 +307,7 @@ table td:first-child {
 }
 
 .hero {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   min-height: 700px;
   display: flex;
