--- a/scss/component/hero.scss
+++ b/scss/component/hero.scss
@@ -1,7 +1,7 @@
 @import "../core/variable.scss";
 
 .hero {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     min-height: 700px;
     display: flex;
